--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://eddy99leon.github.io/Mada-Blog/",
+  "homepage": "https://eddy99leon.github.io/Mada-Blog/Mada-Blog/",
   "name": "vite-react-tailwind",
   "private": true,
   "version": "0.0.0",
